// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutPage renders 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1
        id="test"
      >
        test
      </h1>
    </div>
  </main>
  <footer
    class="main-container main-container--content md:flex mt-2"
  >
    <div
      class="md:flex-grow mb-2"
    >
      <a
        class="link mr-1 p-1"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link mr-1 p-1"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="mb-2"
    />
  </footer>
</DocumentFragment>
`;

exports[`AboutPage shows a warning on non-english pages 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
      data-testid="about-page-language-warning"
    >
      [Translation for https://example.com/global/translations.ttl#onlyAvailableInEnglish does not exist]
    </div>
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1
        id="test"
      >
        test
      </h1>
    </div>
  </main>
  <footer
    class="main-container main-container--content md:flex mt-2"
  >
    <div
      class="md:flex-grow mb-2"
    >
      <a
        class="link mr-1 p-1"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link mr-1 p-1"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="mb-2"
    >
      <span
        data-testid="locale-selector-language"
      >
        <a
          class="button"
          href="/?locale=%F0%9F%87%B3%F0%9F%87%B4"
        >
          🇺🇸 [Translation for https://example.com/global/translations.ttl#translateTo does not exist]
        </a>
      </span>
    </div>
  </footer>
</DocumentFragment>
`;
